tests/ui/unsafe-binders/type-mismatch.stderr
error[E0308]: mismatched types
  --> $DIR/type-mismatch.rs:4:27
   |
LL |     let x: unsafe<> i32 = 0;
   |            ------------   ^ expected `unsafe<> i32`, found integer
   |            |
   |            expected due to this
   |
   = note: expected unsafe binder `unsafe<> i32`
                       found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/type-mismatch.rs:6:33
   |
LL |     let x: unsafe<'a> &'a i32 = &0;
   |            ------------------   ^^ expected `unsafe<'a> &i32`, found `&{integer}`
   |            |
   |            expected due to this
   |
   = note: expected unsafe binder `unsafe<'a> &'a i32`
                  found reference `&{integer}`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
